--- a/BioCro/DARPA/biomass_opti/scripts/optimize_biomass_coef.Rmd
+++ b/BioCro/DARPA/biomass_opti/scripts/optimize_biomass_coef.Rmd
@@ -19,6 +19,9 @@ First, read in necessary input data for the chamber experiment 2, 31_31_430 trea
 
 ```{r, message=FALSE}
 library(dplyr)
+library(BioCro)
+library(DEoptim)
+library(ggplot2)
 
 rundir <- getwd()
 
@@ -47,8 +50,6 @@ We want biomass estimates from `BioGro` (i.e., ttt) to be as close to the actual
 
 First create objective function `opfn`, and include parameter values to test if this function by itself works. The objective function to be minimized is the residual sum of squares. 
 ```{r, message=FALSE}
-library(BioCro)
-
 opfn <- function(optimizingParms, thermaltimeParms, rhizomeParms){ 
   optimizingParms[1:3] <- optimizingParms[1:3]/sum(optimizingParms[1:3], rhizomeParms[1])
   optimizingParms[4:6] <- optimizingParms[4:6]/sum(optimizingParms[4:6], rhizomeParms[2])
@@ -153,27 +154,23 @@ opfn(optimizingParms_check, thermaltimeParms_check, rhizomeParms_check)
 
 Run objective function through optimization with `DEoptim`, setting the upper and lower bounds for the varying parameters to 0 and 1 and providing values for the non-varying parameters thermal time and rhizome coefficients. Reducing itermax reduces time to run `DEoptim`;the resulting best value reduces to aboutu 10% of original. 
 ```{r, results='hide', message=FALSE}
-library(DEoptim)
-
 thermaltimevals <- as.numeric(unlist(config$pft$phenoParms[grep("tp", names(config$pft$phenoParms))]))
 rhizomevals <- rep(0.0001, 6)
 
-opt_results <- DEoptim(fn = opfn, lower = rep(0, 19), upper = rep(1, 19), thermaltimeParms = thermaltimevals, rhizomeParms = rhizomevals, control = DEoptim.control(itermax = 20))
+opt_results <- DEoptim(fn = opfn, lower = rep(0, 19), upper = rep(1, 19), thermaltimeParms = thermaltimevals, rhizomeParms = rhizomevals, control = DEoptim.control(itermax = 50))
 
 save(opt_results, file = "opt_results.Rdata")
 ```
 
 Test that the resulting parameter values produce the same biomass estimates. `parms_results` are the actual parameters that we would use because they've been adjusted for the sum to 1 constraint. 
 ```{r, message=FALSE}
-library(ggplot2)
-
 parms_results <- as.vector(opt_results$optim$bestmem)
 parms_results[1:3] <- parms_results[1:3]/sum(parms_results[1:3], rhizomevals[1])
-parms_results[4:6] <- parms_results[4:6]/sum(parms_results[4:6], rhizomevals[1])
-parms_results[7:9] <- parms_results[7:9]/sum(parms_results[7:9], rhizomevals[1])
-parms_results[10:12] <- parms_results[10:12]/sum(parms_results[10:12], rhizomevals[1])
-parms_results[13:15] <- parms_results[13:15]/sum(parms_results[13:15], rhizomevals[1])
-parms_results[16:19] <- parms_results[16:19]/sum(parms_results[16:19], rhizomevals[1])
+parms_results[4:6] <- parms_results[4:6]/sum(parms_results[4:6], rhizomevals[2])
+parms_results[7:9] <- parms_results[7:9]/sum(parms_results[7:9], rhizomevals[3])
+parms_results[10:12] <- parms_results[10:12]/sum(parms_results[10:12], rhizomevals[4])
+parms_results[13:15] <- parms_results[13:15]/sum(parms_results[13:15], rhizomevals[5])
+parms_results[16:19] <- parms_results[16:19]/sum(parms_results[16:19], rhizomevals[6])
 optimalParms <- phenoParms(tp1 = thermaltimevals[1], 
                            tp2 = thermaltimevals[2], 
                            tp3 = thermaltimevals[3], 
@@ -243,7 +240,8 @@ biomass_meas_plot <- opt_biomass %>%
 biomass_ests_plot <- results_test2 %>% 
   tidyr::pivot_longer(Stem:Grain) %>% 
   mutate(data = "estimates")
-biomass_plot <- bind_rows(biomass_meas_plot, biomass_ests_plot)
+biomass_plot <- bind_rows(biomass_meas_plot, biomass_ests_plot) %>%
+  filter(name !="Rhizome")
 
 ggplot() +
   geom_vline(xintercept = thermaltimevals, alpha = 0.5) +
