--- a/BioCro/DARPA/Gs_sensitivity.Rmd
+++ b/BioCro/DARPA/Gs_sensitivity.Rmd
@@ -231,12 +231,10 @@ fig_b_ts <- ggplot() +
   scale_x_date(limits = c(as.Date("2010-05-15"), as.Date("2010-07-09"))) +
   scale_color_manual(values = cols) +
   facet_wrap(~location)+
-  theme_cowplot() +
-  theme(axis.title.x = element_blank(),
-        # legend.position = c(0.05, 0.5),
-        # legend.title = element_blank(),
-        # legend.text = element_text(size = 10),
-        # legend.key.size = unit(0.3, "cm"),
+  theme_bw(base_size = 12) +
+  theme(panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        axis.title.x = element_blank(),
         strip.background = element_blank()) +
   guides(color = FALSE)
 fig_b_ts
@@ -250,8 +248,10 @@ fig_t_ts <- ggplot() +
   scale_x_date(limits = c(as.Date("2010-05-15"), as.Date("2010-07-09"))) +
   scale_color_manual(values = cols) +
   facet_wrap(~location)+
-  theme_cowplot() +
-  theme(axis.title.x = element_blank(),
+  theme_bw(base_size = 12) +
+  theme(panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        axis.title.x = element_blank(),
         strip.background = element_blank()) +
   guides(color = FALSE)
 fig_t_ts
